--- a/my-example-app/src/index.css
+++ b/my-example-app/src/index.css
@@ -32,30 +32,30 @@ body {
 
 @media only screen and (min-width:1024px){
   .md-column {
-     position: relative;
+     position: absolute;
      width:30%;
-     margin-left: 2,5%;
-     margin-right: 2.5%;
+     margin-left: 35%;
+     margin-right: 35%;
      margin-top:1%;
   }  
 }
 
 @media only screen and (max-width:1020px){
   .sm-column{
-    position:relative;
-    margin-left:10%;
-    margin-right:10%;
-    width:80%;
+    position:absolute;
+    margin-left:20%;
+    margin-right:20%;
+    width:60%;
     margin-top:2%;
   }
 }
 
 @media only screen and (max-width:769px){
   .xs-column {
-    position: relative;
+    position: absolute;
     margin-left: 10%;
     margin-right: 10%;
-    width: 100%;
+    width: 80%;
     margin-top: 2%;
   }
 }
